--- a/initiation/02concatenation.html
+++ b/initiation/02concatenation.html
@@ -2,13 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercice</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Concaténation</title>
+    <script type="text/javascript" src="js/02.js"></script>
 </head>
 <body>
-<script type="text/javascript"src="js/exercice2.js"></script>
 
-    
 </body>
 </html>
